# Extra-Plugin

./: README.md  advice.py  approve.py  ban.py  bots.py  cat.py  chatgpt.py  couple.py  dog.py  fake.py  figlet.py  filemanager.py  filter.py  fun.py  gemini.py  goodbye.py  group.py  hastag.py  image.py  info.py  joke.py  love.py  mongo.py  notes.py  pretender.py  pyproject.toml  quiz.py  radio.py  requirements.txt  sticker.py  tagall.py  telegraph.py  thumb.py  truth.py  utils.py  vcmember.py  wall.py  websource.py  welcome.py  wordle.py  (+2 more)
.github/workflows/: Pylint.yml  format.yml
plugins/: advice.py  approve.py  ban.py  bard.py  bots.py  cat.py  chatgpt.py  couple.py  dog.py  figlet.py  filemanager.py  filter.py  font.py  fun.py  gemini.py  goodbye.py  google.py  group.py  hastag.py  hug.py  ig.py  image.py  info.py  joke.py  markdown.py  mongo.py  notes.py  pretender.py  pypi.py  q.py  quiz.py  radio.py  requirements.txt  setup.cfg  sticker.py  tagall.py  telegraph.py  thumb.py  truth.py  tts.py  (+9 more)
utils/: __init__.py  error.py  permissions.py  welcomedb.py
yukkimusic_plugin_addon/: __init__.py
yukkimusic_plugin_addon/plugins/: ban.py  bots.py  fun.py  gemini.py  goodbye.py  group.py  hastag.py  markdown.py  pretender.py  pypi.py  q.py  qrgen.py  slap.py  thumb.py  wall.py  welcome.py  zombies.py
